[package]
name="sputnik"
description="boilerplate rocket, async-graphql, sqlx"
version="0.1.0"
authors=["Keng Lim<lionkeng@gmail.com>"]
edition="2018"

[dependencies]
anyhow 					= "1.0"
async-trait 			= "0.1"
# async-graphql 		= "2.9"
async-graphql 			= { path = "../async-graphql" }
async-graphql-rocket 	= { path = "../async-graphql/integrations/rocket" }
deadpool 				= "0.8"
dotenv 					= "0.15"
rocket 					= { version = "0.5.0-rc.1", default-features = false }
serde 					= "1.0"
sqlx 					= { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
strum 					= "0.21"
strum_macros 			= "0.21"
